# nih-reporter-mcp-server

./: .dockerignore  .gitignore  Procfile  README.md  cert.pem  dockerfile  key.pem  manifest.yaml  pyproject.toml  requirements.txt  response.json  sample_entry.json  server.json  start.sh
.claude/: settings.local.json
eval/: __init__.py  badge.json  eval_methods.py  evaluator.py  questions.csv  run_eval.py
experimental/: elicitation_utils.py
reporter/: explore_api.py  pyproject.toml  reporter.py  utils.py
reporter/models/: reporter_models.py
scripts/: explore_api.py  server.py
src/reporter/: app.py  models.py  prompts.py  tools.py  utils.py
