[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "reporter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncio>=3.4.3",
    "fastmcp>=2.12.4",
    "httpx>=0.28.1",
    "mcp[cli]>=1.12.1",
    "pydantic>=2.11.7",
    "requests>=2.32.4",
    "starlette>=0.47.2",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
